Fix top bar title alignment.

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -15,3 +15,7 @@
   top: 0;
   z-index: 1;
 }
+
+span.title {
+  padding-left: 26px;
+}
